--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,12 @@
   margin: 0;
   list-style-type: none;
   max-width: 100dvw;
+  scroll-behavior: smooth;
 }
 
 html, body {
   font-family: "Montserrat", sans-serif;
-  color: black;
+  color: #000;
   overflow-x: clip;
   list-style: none;
   scroll-behavior: smooth;
@@ -26,9 +27,13 @@ html, body {
   padding: 3rem;
   justify-content: space-between;
   align-items: center;
-  position: relative;
   text-transform: uppercase;
   font-weight: 600;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  background: #FFF;
   /*<===== hamburger styling =====>*/
 }
 .header .navigation .site-logo > img {
@@ -47,14 +52,23 @@ html, body {
   background-color: #FFF;
   padding: 1rem 0;
   width: 100dvw;
+  border-bottom-left-radius: 5rem;
+  border-bottom-right-radius: 5rem;
 }
 .header .navigation .navitems .navlist > li {
   display: block;
   margin: 1.5rem;
   padding: 1rem;
-  border-bottom: 0.0125rem solid rgba(0, 0, 0, 0.3019607843);
+  border-bottom: 0.0125rem solid #000;
   cursor: pointer;
   font-size: 2.5rem;
+}
+.header .navigation .navitems .navlist > li a {
+  text-decoration: none;
+  color: inherit;
+}
+.header .navigation .navitems .navlist > li:hover {
+  opacity: 0.7;
 }
 .header .navigation .navitems .nav-cta {
   display: flex;
@@ -63,12 +77,13 @@ html, body {
   padding: 1rem;
   border-radius: 2rem;
   border: none;
-  background-color: #0D6EFD;
+  background-color: #B5D75C;
   margin: 2rem auto;
   color: #FFF;
   font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
+  align-items: center;
 }
 .header .navigation .hamburger {
   display: block;
@@ -82,7 +97,7 @@ html, body {
   height: 3px;
   margin: 5px auto;
   transition: all 0.3s ease;
-  background-color: #0D6EFD;
+  background-color: #0053ce;
 }
 .header .navigation .hamburger.active .bar:nth-child(2) {
   opacity: 0;
@@ -93,6 +108,40 @@ html, body {
 .header .navigation .hamburger.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
 }
+@media screen and (min-width: 769px) {
+  .header .navigation {
+    padding-inline: 5rem;
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
+  }
+  .header .navigation .site-logo > img {
+    width: 15rem;
+    height: 8rem;
+  }
+  .header .navigation .hamburger {
+    display: none;
+  }
+  .header .navigation .navitems {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header .navigation .navitems .navlist {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header .navigation .navitems .navlist li {
+    border-bottom: none;
+    white-space: nowrap;
+  }
+  .header .navigation .navitems .nav-cta {
+    padding: 1rem;
+    font-size: 2rem;
+    width: 15rem;
+  }
+  .header .navigation .navitems .nav-cta:hover {
+    box-shadow: 0 0 2rem rgba(180, 215, 92, 0.8549019608);
+  }
+}
 
 .hero {
   padding: 2rem;
@@ -101,13 +150,14 @@ html, body {
   background-color: #FFF;
 }
 .hero h1 {
-  font-size: 5rem;
+  margin-top: 10rem;
+  font-size: 4rem;
   font-weight: 900;
   text-transform: uppercase;
   text-align: center;
 }
 .hero .hero-img {
-  width: 35rem;
+  width: 25rem;
   height: 20rem;
   margin: 1rem auto;
 }
@@ -133,7 +183,7 @@ html, body {
   justify-content: space-between;
   border-radius: 1rem;
   font-size: 1.5rem;
-  background-color: #0D6EFD;
+  background-color: #B5D75C;
   border: none;
   cursor: pointer;
   color: #FFF;
@@ -143,11 +193,11 @@ html, body {
 .hero .hero-info button .hero-cta {
   display: block;
   box-sizing: border-box;
-  border: 2px solid #0D6EFD;
+  border: 2px solid #B5D75C;
   border-radius: 1rem;
   padding: 0.5em;
   background: #FFF;
-  color: #0D6EFD;
+  color: #B5D75C;
   transform: translateY(-0.2em);
   transition: transform 0.1s ease;
 }
@@ -158,6 +208,39 @@ html, body {
 .hero .hero-info button:active .hero-cta {
   /* Push the button downwards when pressed */
   transform: translateY(0);
+}
+@media screen and (min-width: 769px) {
+  .hero {
+    padding-inline: 5rem;
+    margin-top: 10rem;
+  }
+  .hero h1 {
+    font-size: 9rem;
+    margin-top: 5rem;
+  }
+  .hero .hero-img {
+    width: 50rem;
+    height: 30rem;
+  }
+  .hero .hero-info {
+    padding-inline: 15rem;
+  }
+  .hero .hero-info h3 {
+    font-size: 5rem;
+  }
+  .hero .hero-info p {
+    font-size: 3rem;
+  }
+  .hero .hero-info button .hero-cta {
+    padding: 1em;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  main {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 .whoWeAre {
@@ -198,6 +281,7 @@ html, body {
   -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
   transition: all 250ms;
   overflow: hidden;
+  cursor: pointer;
 }
 .whoWeAre .whoWeAre-cta::before {
   content: "";
@@ -219,9 +303,28 @@ html, body {
 .whoWeAre .whoWeAre-cta:hover::before {
   width: 100%;
 }
+@media screen and (min-width: 769px) {
+  .whoWeAre {
+    margin: 5rem 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .whoWeAre .whoWeAre-info {
+    font-size: 3rem;
+  }
+  .whoWeAre .whoWeAre-header {
+    font-size: 3.5rem;
+  }
+  .whoWeAre .whoWeAre-text {
+    font-size: 3rem;
+  }
+  .whoWeAre .whoWeAre-cta {
+    align-self: flex-end;
+  }
+}
 
 .statements {
-  background: #0D6EFD;
+  background: #0053ce;
   margin: 5rem;
   border-radius: 3rem;
   padding: 2rem;
@@ -254,6 +357,29 @@ html, body {
     justify-content: space-between;
   }
 }
+@media screen and (min-width: 769px) {
+  .statements {
+    margin: 10rem 0;
+    padding: 5rem;
+    display: flex;
+    justify-content: center;
+  }
+  .statements .statements-container {
+    flex-direction: column;
+    gap: 5rem;
+    text-align: center;
+  }
+  .statements .statements-container .statement-img > img {
+    width: 25rem;
+    height: 25rem;
+  }
+  .statements .statements-container .statement-body {
+    font-size: 2.5rem;
+  }
+  .statements .statements-container .statement-body p {
+    font-size: 3rem;
+  }
+}
 
 .weCanHelp {
   color: #e8e8e8;
@@ -277,9 +403,8 @@ html, body {
   padding: 1.5rem 2.5rem;
   border: none;
   border-radius: 2em;
-  background: #fff;
+  background: #FFF;
   transition: all 0.1s linear;
-  box-shadow: 0 0.5rem 1.5rem rgba(255, 255, 255, 0.1019607843);
 }
 .weCanHelp button:active {
   transform: scale(0.95);
@@ -289,12 +414,13 @@ html, body {
 }
 .weCanHelp button .border {
   position: absolute;
-  border: 0.2rem solid #fff;
+  border: 0.2rem solid #FFF;
   transition: all 0.3s 0.08s linear;
   top: 50%;
   left: 50%;
   width: 9em;
   height: 3em;
+  border-radius: 2em;
   transform: translate(-50%, -50%);
 }
 .weCanHelp button:hover .border {
@@ -302,8 +428,16 @@ html, body {
   width: 15rem;
   height: 6rem;
 }
-.weCanHelp button .full-rounded {
-  border-radius: 2em;
+@media screen and (min-width: 769px) {
+  .weCanHelp h2 {
+    font-size: 5rem;
+  }
+  .weCanHelp p {
+    font-size: 3rem;
+  }
+  .weCanHelp button {
+    margin: 3rem auto;
+  }
 }
 
 .whatWeOffer {
@@ -338,13 +472,243 @@ html, body {
   font-size: 1.5rem;
   font-weight: 500;
 }
-@media screen and (min-width: 420px) {
+.whatWeOffer .learn-more {
+  border: none;
+  background: #B5D75C;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  display: flex;
+  margin-inline: auto;
+  margin-top: 5rem;
+}
+.whatWeOffer .learn-more a {
+  text-decoration: none;
+  color: #FFF;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.whatWeOffer .learn-more:hover {
+  box-shadow: 0 0 2rem rgba(180, 215, 92, 0.8549019608);
+}
+@media screen and (min-width: 650px) {
+  .whatWeOffer {
+    padding: 4rem;
+  }
+  .whatWeOffer p {
+    font-size: 3rem;
+    margin: 2rem 0;
+  }
   .whatWeOffer .offer-items {
     flex-direction: row;
+    margin: 5rem auto;
+    gap: 4rem;
+  }
+  .whatWeOffer .offer-items .offer-img > img {
+    width: 25rem;
+    height: 20rem;
+  }
+  .whatWeOffer .offer-items p {
+    font-size: 3rem;
+  }
+  .whatWeOffer .offer-items span {
+    font-size: 2rem;
   }
   .whatWeOffer .right {
     flex-direction: row-reverse;
   }
+}
+@media screen and (min-width: 769px) {
+  .whatWeOffer {
+    padding: 4rem 10rem;
+  }
+  .whatWeOffer p {
+    font-size: 3rem;
+    margin: 2rem 0;
+  }
+  .whatWeOffer .offer-items {
+    flex-direction: row;
+    margin: 5rem auto;
+    gap: 4rem;
+  }
+  .whatWeOffer .offer-items .offer-img > img {
+    width: 40rem;
+    height: 30rem;
+  }
+  .whatWeOffer .offer-items p {
+    font-size: 3.5rem;
+  }
+  .whatWeOffer .offer-items span {
+    font-size: 2.5rem;
+  }
+  .whatWeOffer .right {
+    flex-direction: row-reverse;
+  }
+}
+
+.accordion {
+  margin: 5rem;
+  color: #e8e8e8;
+}
+.accordion h3 {
+  font-size: 4rem;
+  text-align: center;
+}
+.accordion .faq {
+  border-bottom: 1px solid #FFF;
+}
+.accordion .faq .faq-question {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 0.5rem;
+  position: relative;
+  list-style: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+}
+.accordion .faq .faq-answer {
+  font-size: 1.5rem;
+  padding: 10px;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.accordion .faq .faq-answer span > img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 2rem;
+}
+@media screen and (min-width: 420px) {
+  .accordion .faq .faq-answer {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 769px) {
+  .accordion {
+    margin: 10rem;
+  }
+  .accordion .faq {
+    padding: 2rem 0;
+  }
+  .accordion .faq .faq-question {
+    font-size: 2.5rem;
+  }
+  .accordion .faq .faq-answer {
+    font-size: 2rem;
+  }
+  .accordion .faq .faq-answer span > img {
+    width: 20rem;
+    height: 20rem;
+  }
+}
+
+.footer {
+  margin-top: 10rem;
+  padding: 2rem;
+  background: #0053ce;
+  border-top-left-radius: 5rem;
+  border-top-right-radius: 5rem;
+  box-shadow: 0rem 0rem 3rem 3rem rgba(0, 82, 206, 0.4862745098);
+  color: #e8e8e8;
+}
+.footer .logo {
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0;
+}
+.footer .logo img {
+  width: 15rem;
+  height: 10rem;
+}
+.footer aside {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-bottom: 1px solid #FFF;
+  padding: 2rem 0;
+  gap: 2rem;
+}
+.footer aside div h3 {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+.footer aside div p {
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+  font-weight: 600;
+}
+.footer aside div p > span > a {
+  font-size: 2rem;
+  cursor: pointer;
+  font-weight: 500;
+  text-decoration: none;
+  color: inherit;
+}
+.footer aside div p > span > a:hover {
+  opacity: 0.7;
+}
+.footer section .footer-item {
+  margin: 1rem 0;
+}
+.footer section .footer-item h3 {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+.footer section .footer-item .footer-link > li > a {
+  font-size: 2rem;
+  cursor: pointer;
+  font-weight: 500;
+  text-decoration: none;
+  color: inherit;
+}
+.footer section .footer-item .footer-link > li > a:hover {
+  opacity: 0.7;
+}
+.footer section .footer-item p {
+  display: flex;
+  flex-direction: column;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+@media screen and (min-width: 769px) {
+  .footer section {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2rem;
+  }
+}
+.footer .legal {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 3rem;
+}
+.footer .legal span > a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+}
+.footer .go-up {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 5%;
+  right: 1%;
+  border-radius: 50%;
+  background-color: #FFF;
+  color: #000;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
